force-app/main/default/objects/Circuit__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle</label>
    <referenceTo>Circles__c</referenceTo>
    <relationshipLabel>Circuits</relationshipLabel>
    <relationshipName>Circuits</relationshipName>
    <type>Lookup</type>
</CustomField>