force-app/main/default/objects/Circuit__c/fields/CircuitId__c.field-meta.xml
<CustomField>
    <fullName>CircuitId__c</fullName>
    <description>Circuit Id of OHFC and UG</description>
    <externalId>true</externalId>
    <inlineHelpText>Circuit Id of OHFC and UG</inlineHelpText>
    <label>Circuit Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>