force-app/main/default/objects/Circuit__c/fields/CustomerCircuitId__c.field-meta.xml
<CustomField>
    <fullName>CustomerCircuitId__c</fullName>
    <label>Customer Circuit Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>