force-app/main/default/objects/Circuit__c/fields/FieldEngineer__c.field-meta.xml
<CustomField>
    <fullName>FieldEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circuits</relationshipName>
    <type>Lookup</type>
</CustomField>