force-app/main/default/objects/Circuit__c/fields/LinkName__c.field-meta.xml
<CustomField>
    <fullName>LinkName__c</fullName>
    <description>Link Name or Route Name for OHFC/UG</description>
    <inlineHelpText>Link Name or Route Name for OHFC/UG</inlineHelpText>
    <label>Link Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>