force-app/main/default/objects/Circuit__c/fields/NOCContactEmail__c.field-meta.xml
<CustomField>
    <fullName>NOCContactEmail__c</fullName>
    <label>NOC Contact Email</label>
    <type>Email</type>
</CustomField>