force-app/main/default/objects/Circuit__c/fields/RouteName__c.field-meta.xml
<CustomField>
    <fullName>RouteName__c</fullName>
    <label>Route Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>