force-app/main/default/objects/Circuit__c/fields/SiteAAddress__c.field-meta.xml
<CustomField>
    <fullName>SiteAAddress__c</fullName>
    <label>SiteAAddress</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>