force-app/main/default/objects/Circuit__c/fields/SiteALatitude__c.field-meta.xml
<CustomField>
    <fullName>SiteALatitude__c</fullName>
    <label>SiteALatitude</label>
    <length>16</length>
    <type>Text</type>
</CustomField>