force-app/main/default/objects/Circuit__c/fields/SiteALongitude__c.field-meta.xml
<CustomField>
    <fullName>SiteALongitude__c</fullName>
    <label>SiteALongitude</label>
    <length>16</length>
    <type>Text</type>
</CustomField>