force-app/main/default/objects/Circuit__c/fields/SiteZAddress__c.field-meta.xml
<CustomField>
    <fullName>SiteZAddress__c</fullName>
    <label>SiteZAddress</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>