force-app/main/default/objects/Circuit__c/fields/SiteZLatitude__c.field-meta.xml
<CustomField>
    <fullName>SiteZLatitude__c</fullName>
    <label>SiteZLatitude</label>
    <length>32</length>
    <type>Text</type>
</CustomField>