force-app/main/default/objects/Circuit__c/fields/SiteZLongitude__c.field-meta.xml
<CustomField>
    <fullName>SiteZLongitude__c</fullName>
    <label>SiteZLongitude</label>
    <length>16</length>
    <type>Text</type>
</CustomField>