force-app/main/default/objects/Circuit__c/listViews/OHFC_Circuits.listView-meta.xml
<ListView>
    <fullName>OHFC_Circuits</fullName>
    <columns>NAME</columns>
    <columns>CircuitId__c</columns>
    <columns>LinkName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CustomerCircuitId__c</columns>
    <columns>Circle__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>OHFC Circuits</label>
</ListView>