force-app/main/default/objects/Circuit__c/listViews/UG_Circuits.listView-meta.xml
<ListView>
    <fullName>UG_Circuits</fullName>
    <columns>NAME</columns>
    <columns>CircuitId__c</columns>
    <columns>RouteName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LOB__c</field>
        <operation>equals</operation>
        <value>UG</value>
    </filters>
    <label>UG Circuits</label>
</ListView>